traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:1: error: Missing closing brace `}' assumed here
override def run() {
^TraversalDiagonal:1: error: expected start of definition
override def run() {
         ^